# advanced-programming-2

./: .gitignore  .replit  CMakeLists.txt  README.md
src/: CMakeLists.txt  adaship_config.ini  board-renderer.cc  board-renderer.h  computer-ai.cc  computer-ai.h  main.cc  shared.cc  shared.h
src/board/: auto-placer.cc  auto-placer.h  board.cc  board.h  boat.cc  boat.h  placement-generator.h  random-placement-generator.cc  random-placement-generator.h
src/board-renderer/: board-renderer.cc  board-renderer.h
src/configuration/: configuration-parser.cc  configuration-parser.h  configuration.h
test/: CMakeLists.txt  board-render-test.cc  board-renderer-test.cc  board-test.cc  computer-ai-test.cc  configuration-parser-test.cc
